--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,17 @@
 # Pre-commit requirements (copied from requirements_test_pre_commit.txt)
-autoflake==2.0.0
 bandit==1.7.4
-black==23.1.0
+bandit==1.7.4
+black==23.3.0
 codespell==2.2.2
-flake8-comprehensions==3.10.1
-flake8-docstrings==1.6.0
-flake8-noqa==1.3.0
-flake8==6.0.0
 isort==5.12.0
-mccabe==0.7.0
-pycodestyle==2.10.0
-pydocstyle==6.2.3
-pyflakes==3.0.1
-pyupgrade==3.3.1
-ruff==0.0.247
+ruff==0.0.260
 yamllint==1.28.0
 
 # Unit tests requirements
-pylint==2.16.0
-pytest==7.2.1
+pylint==2.17.0
+pytest==7.2.2
 numpy==1.23.2
-pytest-homeassistant-custom-component==0.12.57
+pytest-homeassistant-custom-component==0.13.12
 
 #HomeAssistant
-homeassistant==2023.3.0
+homeassistant==2023.3.6
