--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,19 @@ yamllint==1.28.0
 
 # Unit tests requirements (from requirements_test.txt)
 pylint==2.17.0
+pytest-asyncio==0.20.3
+pytest-aiohttp==1.0.4
+pytest-cov==3.0.0
+pytest-freezer==0.4.6
+pytest-socket==0.5.1
+pytest-test-groups==1.0.3
+pytest-sugar==0.9.6
+pytest-timeout==2.1.0
+pytest-unordered==0.5.2
+pytest-picked==0.4.6
+pytest-xdist==3.2.1
 pytest==7.3.1
+
 numpy==1.23.2
 pytest-homeassistant-custom-component==0.13.12
 
