--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ bandit==1.7.4
 black==23.3.0
 codespell==2.2.2
 isort==5.12.0
-ruff==0.0.260
+ruff==0.0.272
 yamllint==1.28.0
 
 # Unit tests requirements (from requirements_test.txt)
-pylint==2.17.0
+pylint==2.17.4
+pylint-per-file-ignores==1.1.0
+pipdeptree==2.7.0
 pytest-asyncio==0.20.3
 pytest-aiohttp==1.0.4
 pytest-cov==3.0.0
@@ -22,7 +24,7 @@ pytest-xdist==3.2.1
 pytest==7.3.1
 
 numpy==1.23.2
-pytest-homeassistant-custom-component==0.13.12
+pytest-homeassistant-custom-component==0.13.37
 
 #HomeAssistant
-homeassistant==2023.5.0
+homeassistant==2023.6.1
