--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ ruff==0.0.272
 yamllint==1.28.0
 
 # Unit tests requirements (from requirements_test.txt)
+coverage==7.2.4
+
 pylint==2.17.4
 pylint-per-file-ignores==1.1.0
 pipdeptree==2.7.0
@@ -22,6 +24,8 @@ pytest-unordered==0.5.2
 pytest-picked==0.4.6
 pytest-xdist==3.2.1
 pytest==7.3.1
+
+requests_mock==1.10.0
 
 numpy==1.23.2
 pytest-homeassistant-custom-component==0.13.37
