--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ yamllint==1.32.0
 # Unit tests requirements (from requirements_test.txt)
 coverage==7.3.2
 
-pylint==3.0.2
+pylint==3.0.3
 pylint-per-file-ignores==1.2.1
 pipdeptree==2.11.0
 pytest-asyncio==0.21.0
@@ -19,7 +19,7 @@ pytest-test-groups==1.0.3
 pytest-sugar==0.9.7
 pytest-timeout==2.1.0
 pytest-unordered==0.5.2
-pytest-picked==0.4.6
+pytest-picked==0.5.0
 pytest-xdist==3.3.1
 pytest==7.4.3
 
@@ -27,8 +27,11 @@ requests_mock==1.11.0
 
 
 # Packages from package_constraints.txt which are otherwise installed on run
-aiohttp-cors==0.7.0
-home-assistant-frontend==20231030.1
+aiohttp-fast-url-dispatcher==0.3.0
+aiohttp-zlib-ng==0.1.1
+aiohttp==3.9.1
+aiohttp_cors==0.7.0
+home-assistant-frontend==20231208.2
 janus==1.0.0
 numpy==1.26.0
 Pillow==10.1.0
@@ -37,5 +40,5 @@ SQLAlchemy==2.0.23
 radios==0.1.1
 
 # HomeAssistant
-pytest-homeassistant-custom-component==0.13.82
-homeassistant==2023.12.0
+pytest-homeassistant-custom-component==0.13.85
+homeassistant==2023.12.3
