--- a/container_content/.vscode/settings.json
+++ b/container_content/.vscode/settings.json
@@ -1,15 +1,10 @@
 {
-    "editor.formatOnPaste": false,
-    "editor.formatOnSave": true,
-    "editor.formatOnType": true,
-    "files.trimTrailingWhitespace": true,
-    "files.eol": "\n",
-    "editor.tabSize": 4,
-    "python.analysis.autoSearchPaths": false,
-    "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false,
+    // Please keep this file in sync with settings in home-assistant/.devcontainer/devcontainer.json
     "python.formatting.provider": "black",
-    "python.testing.pytestArgs": [
-        "--no-cov"
-    ]
-}
+    // Added --no-cov to work around TypeError: message must be set
+    // https://github.com/microsoft/vscode-python/issues/14067
+    "python.testing.pytestArgs": ["--no-cov"],
+    // https://code.visualstudio.com/docs/python/testing#_pytest-configuration-settings
+    "python.testing.pytestEnabled": false
+  }
+  
