--- a/container_content/.vscode/tasks.json
+++ b/container_content/.vscode/tasks.json
@@ -19,26 +19,10 @@
             "problemMatcher": []
         },
         {
-            "label": "Flake8",
-            "type": "shell",
-            "command": "flake8",
-            "group": {
-                "kind": "test",
-                "isDefault": true
-            },
-            "presentation": {
-                "reveal": "always",
-                "panel": "new"
-            },
-            "problemMatcher": []
-        },
-        {
             "label": "Pylint",
             "type": "shell",
             "command": "pylint custom_components",
-            "dependsOn": [
-                "Install all Requirements"
-            ],
+            "dependsOn": [],
             "group": {
                 "kind": "test",
                 "isDefault": true
