--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,17 @@ ruff==0.2.1
 yamllint==1.32.0
 
 # Unit tests requirements (from requirements_test.txt)
+astroid==3.0.1
 coverage==7.4.1
-
+freezegun==1.3.1
+mock-open==1.4.0
+mypy==1.8.0
+pre-commit==3.6.1
+pydantic==1.10.12
 pylint==3.0.3
-pylint-per-file-ignores==1.2.1
+pylint-per-file-ignores==1.3.2
 pipdeptree==2.13.2
-pytest-asyncio==0.23.4
+pytest-asyncio==0.23.5
 pytest-aiohttp==1.0.5
 pytest-cov==4.1.0
 pytest-freezer==0.4.8
@@ -20,24 +25,126 @@ pytest-timeout==2.1.0
 pytest-unordered==0.5.2
 pytest-picked==0.5.0
 pytest-xdist==3.3.1
-pytest==7.4.4
+pytest==8.0.0
 requests-mock==1.11.0
+respx==0.20.2
+syrupy==4.6.1
+tqdm==4.66.2
+types-aiofiles==23.2.0.20240106
+types-atomicwrites==1.4.5.1
+types-croniter==1.0.6
+types-beautifulsoup4==4.12.0.20240106
+types-caldav==1.3.0.20240106
+types-chardet==0.1.5
+types-decorator==5.1.8.20240106
+types-paho-mqtt==1.6.0.20240106
+types-pillow==10.2.0.20240111
+types-protobuf==4.24.0.20240106
+types-psutil==5.9.5.20240106
+types-python-dateutil==2.8.19.20240106
+types-python-slugify==8.0.0.3
+types-pytz==2023.3.1.1
+types-PyYAML==6.0.12.12
+types-requests==2.31.0.3
+types-xmltodict==0.13.0.3
+
+
+# Home Assistant Core
+aiohttp==3.9.3
+aiohttp_cors==0.7.0
+aiohttp-fast-url-dispatcher==0.3.0
+aiohttp-zlib-ng==0.3.1
+astral==2.2
+attrs==23.2.0
+atomicwrites-homeassistant==1.4.1
+awesomeversion==24.2.0
+bcrypt==4.0.1
+certifi>=2021.5.30
+ciso8601==2.3.0
+httpx==0.26.0
+home-assistant-bluetooth==1.12.0
+ifaddr==0.2.0
+Jinja2==3.1.3
+lru-dict==1.3.0
+PyJWT==2.8.0
+cryptography==42.0.2
+pyOpenSSL==24.0.0
+orjson==3.9.14
+packaging>=23.1
+pip>=21.3.1
+python-slugify==8.0.1
+PyYAML==6.0.1
+requests==2.31.0
+typing-extensions>=4.9.0,<5.0
+ulid-transform==0.9.0
+urllib3>=1.26.5,<2
+voluptuous==0.13.1
+voluptuous-serialize==2.6.0
+yarl==1.9.4
 
 
 # Packages from package_constraints.txt which are otherwise installed on run
+aiodiscover==1.6.1
 aiohttp-fast-url-dispatcher==0.3.0
-aiohttp-zlib-ng==0.1.1
-aiohttp==3.9.1
+aiohttp-zlib-ng==0.3.1
+aiohttp==3.9.3
 aiohttp_cors==0.7.0
+astral==2.2
+async-upnp-client==0.38.2
+atomicwrites-homeassistant==1.4.1
+attrs==23.2.0
+awesomeversion==24.2.0
+bcrypt==4.0.1
+bleak-retry-connector==3.4.0
+bleak==0.21.1
+bluetooth-adapters==0.17.0
+bluetooth-auto-recovery==1.3.0
+bluetooth-data-tools==1.19.0
+cached_ipaddress==0.3.0
+certifi>=2021.5.30
+ciso8601==2.3.0
+cryptography==42.0.2
+dbus-fast==2.21.1
+fnv-hash-fast==0.5.0
+ha-av==10.1.1
+ha-ffmpeg==3.1.0
+habluetooth==2.4.0
+hass-nabucasa==0.78.0
+hassil==1.6.1
 home-assistant-bluetooth==1.12.0
-home-assistant-frontend==20240112.0
-home-assistant-intents==2024.1.2
+home-assistant-frontend==20240207.1
+home-assistant-intents==2024.2.2
+httpx==0.26.0
+ifaddr==0.2.0
 janus==1.0.0
-numpy==1.26.0
-Pillow==10.1.0
-SQLAlchemy==2.0.25
+Jinja2==3.1.3
+lru-dict==1.3.0
+mutagen==1.47.0
+orjson==3.9.14
+packaging>=23.1
+paho-mqtt==1.6.1
+Pillow==10.2.0
+pip>=21.3.1
+psutil-home-assistant==0.0.1
+PyJWT==2.8.0
+PyNaCl==1.5.0
+pyOpenSSL==24.0.0
+pyserial==3.5
+python-slugify==8.0.1
+PyTurboJPEG==1.7.1
+pyudev==0.23.2
+PyYAML==6.0.1
+requests==2.31.0
+SQLAlchemy==2.0.27
+typing-extensions>=4.9.0,<5.0
+ulid-transform==0.9.0
+urllib3>=1.26.5,<2
+voluptuous-serialize==2.6.0
+voluptuous==0.13.1
+webrtc-noise-gain==1.2.3
+yarl==1.9.4
+zeroconf==0.131.0
 
-radios==0.1.1
 
 # HomeAssistant
 pytest-homeassistant-custom-component==0.13.100
