--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ codespell==2.2.2
 ruff==0.2.1
 yamllint==1.32.0
 
-# Unit tests requirements (from requirements_test.txt)
+# from requirements_test.txt
 astroid==3.0.1
 coverage==7.4.1
 freezegun==1.3.1
@@ -49,7 +49,7 @@ types-requests==2.31.0.3
 types-xmltodict==0.13.0.3
 
 
-# Home Assistant Core
+# from requirements.txt
 aiohttp==3.9.3
 aiohttp_cors==0.7.0
 aiohttp-fast-url-dispatcher==0.3.0
@@ -67,7 +67,7 @@ ifaddr==0.2.0
 Jinja2==3.1.3
 lru-dict==1.3.0
 PyJWT==2.8.0
-cryptography==42.0.2
+cryptography==42.0.3
 pyOpenSSL==24.0.0
 orjson==3.9.14
 packaging>=23.1
@@ -84,6 +84,7 @@ yarl==1.9.4
 
 
 # Packages from package_constraints.txt which are otherwise installed on run
+aiodhcpwatcher==0.8.0
 aiodiscover==1.6.1
 aiohttp-fast-url-dispatcher==0.3.0
 aiohttp-zlib-ng==0.3.1
@@ -103,7 +104,7 @@ bluetooth-data-tools==1.19.0
 cached_ipaddress==0.3.0
 certifi>=2021.5.30
 ciso8601==2.3.0
-cryptography==42.0.2
+cryptography==42.0.3
 dbus-fast==2.21.1
 fnv-hash-fast==0.5.0
 ha-av==10.1.1
@@ -147,5 +148,5 @@ zeroconf==0.131.0
 
 
 # HomeAssistant
-pytest-homeassistant-custom-component==0.13.100
-homeassistant==2024.2.1
+pytest-homeassistant-custom-component==0.13.101
+homeassistant==2024.2.2
