--- a/requirements.txt
+++ b/requirements.txt
@@ -142,7 +142,7 @@ ulid-transform==0.9.0
 urllib3>=1.26.5,<2
 voluptuous-serialize==2.6.0
 voluptuous==0.13.1
-webrtc-noise-gain==1.2.3
+#webrtc-noise-gain==1.2.3
 yarl==1.9.4
 zeroconf==0.131.0
 
