--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 # Pre-commit requirements (copied from requirements_test_pre_commit.txt)
 codespell==2.2.6
-ruff==0.4.2
+ruff==0.4.3
 yamllint==1.35.1
 
 # from requirements_test.txt
 astroid==3.1.0
-coverage==7.4.4
-freezegun==1.4.0
+coverage==7.5.0
+freezegun==1.5.0
 mock-open==1.4.0
-mypy-dev==1.10.0a3
+mypy==1.10.0
 pre-commit==3.7.0
-pydantic==1.10.12
+pydantic==1.10.15
 pylint==3.1.0
 pylint-per-file-ignores==1.3.2
-pipdeptree==2.16.1
+pipdeptree==2.19.0
 pytest-asyncio==0.23.6
 pytest-aiohttp==1.0.5
 pytest-cov==5.0.0
@@ -24,37 +24,39 @@ pytest-sugar==1.0.0
 pytest-timeout==2.3.1
 pytest-unordered==0.6.0
 pytest-picked==0.5.0
-pytest-xdist==3.4.0
-pytest==8.1.1
-requests-mock==1.11.0
-respx==0.21.0
+pytest-xdist==3.6.1
+pytest==8.2.0
+requests-mock==1.12.1
+respx==0.21.1
 syrupy==4.6.1
-tqdm==4.66.2
-types-aiofiles==23.2.0.20240311
+tqdm==4.66.4
+types-aiofiles==23.2.0.20240403
 types-atomicwrites==1.4.5.1
-types-croniter==2.0.0.20240321
+types-croniter==2.0.0.20240423
 types-beautifulsoup4==4.12.0.20240229
-types-caldav==1.3.0.20240106
+types-caldav==1.3.0.20240331
 types-chardet==0.1.5
 types-decorator==5.1.8.20240310
 types-paho-mqtt==1.6.0.20240321
-types-pillow==10.2.0.20240324
+types-pillow==10.2.0.20240423
 types-protobuf==4.24.0.20240106
-types-psutil==5.9.5.20240316
+types-psutil==5.9.5.20240423
 types-python-dateutil==2.9.0.20240316
 types-python-slugify==8.0.2.20240310
-types-pytz==2024.1.0.20240203
+types-pytz==2024.1.0.20240417
 types-PyYAML==6.0.12.20240311
 types-requests==2.31.0.3
 types-xmltodict==0.13.0.3
-uv==0.1.27
+uv==0.1.39
 
 
 # from requirements.txt
-aiohttp==3.9.3
+aiodns==3.2.0
+aiohttp==3.9.5
 aiohttp_cors==0.7.0
+aiohttp_session==2.12.0
 aiohttp-fast-url-dispatcher==0.3.0
-aiohttp-zlib-ng==0.3.1
+aiohttp-fast-zlib==0.1.0
 astral==2.2
 async-interrupt==1.1.1
 attrs==23.2.0
@@ -64,25 +66,25 @@ bcrypt==4.1.2
 certifi>=2021.5.30
 ciso8601==2.3.1
 fnv-hash-fast==0.5.0
-hass-nabucasa==0.80.0
+hass-nabucasa==0.78.0
 httpx==0.27.0
 home-assistant-bluetooth==1.12.0
 ifaddr==0.2.0
-Jinja2==3.1.3
+Jinja2==3.1.4
 lru-dict==1.3.0
 PyJWT==2.8.0
 cryptography==42.0.5
-Pillow==10.2.0
+Pillow==10.3.0
 pyOpenSSL==24.1.0
-orjson==3.9.15
+orjson==3.10.3
 packaging>=23.1
 pip>=21.3.1
 psutil-home-assistant==0.0.1
 python-slugify==8.0.4
 PyYAML==6.0.1
 requests==2.31.0
-SQLAlchemy==2.0.29
-typing-extensions>=4.10.0,<5.0
+SQLAlchemy==2.0.30
+typing-extensions>=4.11.0,<5.0
 ulid-transform==0.9.0
 urllib3>=1.26.5,<2
 voluptuous==0.13.1
@@ -92,11 +94,13 @@ yarl==1.9.4
 
 # Packages from package_constraints.txt which are otherwise installed on run
 aiodhcpwatcher==1.0.0
-aiodiscover==2.0.0
+aiodiscover==2.1.0
+aiodns==3.2.0
 aiohttp-fast-url-dispatcher==0.3.0
-aiohttp-zlib-ng==0.3.1
-aiohttp==3.9.3
+aiohttp-fast-zlib==0.1.0
+aiohttp==3.9.5
 aiohttp_cors==0.7.0
+aiohttp_session==2.12.0
 astral==2.2
 async-interrupt==1.1.1
 async-upnp-client==0.38.3
@@ -104,10 +108,10 @@ atomicwrites-homeassistant==1.4.1
 attrs==23.2.0
 awesomeversion==24.2.0
 bcrypt==4.1.2
-bleak-retry-connector==3.4.0
-bleak==0.21.1
-bluetooth-adapters==0.18.0
-bluetooth-auto-recovery==1.4.0
+bleak-retry-connector==3.5.0
+bleak==0.22.0
+bluetooth-adapters==0.19.2
+bluetooth-auto-recovery==1.4.2
 bluetooth-data-tools==1.19.0
 cached_ipaddress==0.3.0
 certifi>=2021.5.30
@@ -117,21 +121,21 @@ dbus-fast==2.21.1
 fnv-hash-fast==0.5.0
 ha-av==10.1.1
 ha-ffmpeg==3.2.0
-habluetooth==2.4.2
-hass-nabucasa==0.80.0
+habluetooth==3.0.1
+hass-nabucasa==0.78.0
 hassil==1.6.1
 home-assistant-bluetooth==1.12.0
-home-assistant-frontend==20240404.1
-home-assistant-intents==2024.4.3
+home-assistant-frontend==20240501.1
+home-assistant-intents==2024.4.24
 httpx==0.27.0
 ifaddr==0.2.0
-Jinja2==3.1.3
+Jinja2==3.1.4
 lru-dict==1.3.0
 mutagen==1.47.0
-orjson==3.9.15
+orjson==3.10.3
 packaging>=23.1
 paho-mqtt==1.6.1
-Pillow==10.2.0
+Pillow==10.3.0
 pip>=21.3.1
 psutil-home-assistant==0.0.1
 PyJWT==2.8.0
@@ -143,17 +147,17 @@ PyTurboJPEG==1.7.1
 pyudev==0.24.1
 PyYAML==6.0.1
 requests==2.31.0
-SQLAlchemy==2.0.29
-typing-extensions>=4.10.0,<5.0
+SQLAlchemy==2.0.30
+typing-extensions>=4.11.0,<5.0
 ulid-transform==0.9.0
 urllib3>=1.26.5,<2
 voluptuous-serialize==2.6.0
 voluptuous==0.13.1
 #webrtc-noise-gain==1.2.3
 yarl==1.9.4
-zeroconf==0.132.0
+zeroconf==0.132.2
 
 
 # HomeAssistant
-pytest-homeassistant-custom-component==0.13.119
-homeassistant==2024.5.0
+pytest-homeassistant-custom-component==0.13.122
+homeassistant==2024.5.2
