--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 # Pre-commit requirements (copied from requirements_test_pre_commit.txt)
-codespell==2.2.6
-ruff==0.4.3
+codespell==2.3.0
+ruff==0.4.7
 yamllint==1.35.1
 
 # from requirements_test.txt
-astroid==3.1.0
+astroid==3.2.2
 coverage==7.5.0
 freezegun==1.5.0
 mock-open==1.4.0
-mypy==1.10.0
-pre-commit==3.7.0
+mypy-dev==1.11.0a5
+pre-commit==3.7.1
 pydantic==1.10.15
-pylint==3.1.0
+pylint==3.2.2
 pylint-per-file-ignores==1.3.2
 pipdeptree==2.19.0
 pytest-asyncio==0.23.6
@@ -33,30 +33,30 @@ tqdm==4.66.4
 types-aiofiles==23.2.0.20240403
 types-atomicwrites==1.4.5.1
 types-croniter==2.0.0.20240423
-types-beautifulsoup4==4.12.0.20240229
+types-beautifulsoup4==4.12.0.20240511
 types-caldav==1.3.0.20240331
 types-chardet==0.1.5
 types-decorator==5.1.8.20240310
 types-paho-mqtt==1.6.0.20240321
-types-pillow==10.2.0.20240423
+types-pillow==10.2.0.20240511
 types-protobuf==4.24.0.20240106
-types-psutil==5.9.5.20240423
+types-psutil==5.9.5.20240511
 types-python-dateutil==2.9.0.20240316
 types-python-slugify==8.0.2.20240310
 types-pytz==2024.1.0.20240417
 types-PyYAML==6.0.12.20240311
 types-requests==2.31.0.3
 types-xmltodict==0.13.0.3
-uv==0.1.39
+uv==0.1.43
 
 
 # from requirements.txt
 aiodns==3.2.0
 aiohttp==3.9.5
 aiohttp_cors==0.7.0
-aiohttp_session==2.12.0
 aiohttp-fast-url-dispatcher==0.3.0
 aiohttp-fast-zlib==0.1.0
+aiozoneinfo==0.1.0
 astral==2.2
 async-interrupt==1.1.1
 attrs==23.2.0
@@ -66,7 +66,7 @@ bcrypt==4.1.2
 certifi>=2021.5.30
 ciso8601==2.3.1
 fnv-hash-fast==0.5.0
-hass-nabucasa==0.78.0
+hass-nabucasa==0.81.1
 httpx==0.27.0
 home-assistant-bluetooth==1.12.0
 ifaddr==0.2.0
@@ -84,7 +84,7 @@ python-slugify==8.0.4
 PyYAML==6.0.1
 requests==2.31.0
 SQLAlchemy==2.0.30
-typing-extensions>=4.11.0,<5.0
+typing-extensions>=4.12.1,<5.0
 ulid-transform==0.9.0
 urllib3>=1.26.5,<2
 voluptuous==0.13.1
@@ -100,7 +100,7 @@ aiohttp-fast-url-dispatcher==0.3.0
 aiohttp-fast-zlib==0.1.0
 aiohttp==3.9.5
 aiohttp_cors==0.7.0
-aiohttp_session==2.12.0
+aiozoneinfo==0.1.0
 astral==2.2
 async-interrupt==1.1.1
 async-upnp-client==0.38.3
@@ -109,7 +109,7 @@ attrs==23.2.0
 awesomeversion==24.2.0
 bcrypt==4.1.2
 bleak-retry-connector==3.5.0
-bleak==0.22.0
+bleak==0.22.1
 bluetooth-adapters==0.19.2
 bluetooth-auto-recovery==1.4.2
 bluetooth-data-tools==1.19.0
@@ -117,16 +117,16 @@ cached_ipaddress==0.3.0
 certifi>=2021.5.30
 ciso8601==2.3.1
 cryptography==42.0.5
-dbus-fast==2.21.1
+dbus-fast==2.21.3
 fnv-hash-fast==0.5.0
 ha-av==10.1.1
 ha-ffmpeg==3.2.0
-habluetooth==3.0.1
-hass-nabucasa==0.78.0
-hassil==1.6.1
+habluetooth==3.1.1
+hass-nabucasa==0.81.1
+hassil==1.7.1
 home-assistant-bluetooth==1.12.0
-home-assistant-frontend==20240501.1
-home-assistant-intents==2024.4.24
+home-assistant-frontend==20240604.0
+home-assistant-intents==2024.6.3
 httpx==0.27.0
 ifaddr==0.2.0
 Jinja2==3.1.4
@@ -148,16 +148,16 @@ pyudev==0.24.1
 PyYAML==6.0.1
 requests==2.31.0
 SQLAlchemy==2.0.30
-typing-extensions>=4.11.0,<5.0
+typing-extensions>=4.12.1,<5.0
 ulid-transform==0.9.0
 urllib3>=1.26.5,<2
 voluptuous-serialize==2.6.0
 voluptuous==0.13.1
-#webrtc-noise-gain==1.2.3
+webrtc-noise-gain==1.2.3
 yarl==1.9.4
 zeroconf==0.132.2
 
 
 # HomeAssistant
-pytest-homeassistant-custom-component==0.13.122
-homeassistant==2024.5.2
+pytest-homeassistant-custom-component==0.13.125
+homeassistant==2024.5.5
