--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Pre-commit requirements (copied from requirements_test_pre_commit.txt)
 codespell==2.3.0
-ruff==0.4.9
+ruff==0.5.0
 yamllint==1.35.1
 
 # from requirements_test.txt
@@ -8,10 +8,10 @@ astroid==3.2.2
 coverage==7.5.3
 freezegun==1.5.0
 mock-open==1.4.0
-mypy-dev==1.11.0a6
+mypy-dev==1.11.0a9
 pre-commit==3.7.1
-pydantic==1.10.15
-pylint==3.2.2
+pydantic==1.10.17
+pylint==3.2.4
 pylint-per-file-ignores==1.3.2
 pipdeptree==2.19.0
 pytest-asyncio==0.23.6
@@ -47,7 +47,7 @@ types-pytz==2024.1.0.20240417
 types-PyYAML==6.0.12.20240311
 types-requests==2.31.0.3
 types-xmltodict==0.13.0.3
-uv==0.1.43
+uv==0.2.13
 
 
 # from requirements.txt
@@ -55,20 +55,20 @@ aiodns==3.2.0
 aiohttp==3.9.5
 aiohttp_cors==0.7.0
 aiohttp-fast-url-dispatcher==0.3.0
-aiohttp-fast-zlib==0.1.0
-aiozoneinfo==0.1.0
+aiohttp-fast-zlib==0.1.1
+aiozoneinfo==0.2.1
 astral==2.2
-async-interrupt==1.1.1
+async-interrupt==1.1.2
 attrs==23.2.0
 atomicwrites-homeassistant==1.4.1
-awesomeversion==24.2.0
+awesomeversion==24.6.0
 bcrypt==4.1.2
 certifi>=2021.5.30
 ciso8601==2.3.1
 fnv-hash-fast==0.5.0
 hass-nabucasa==0.81.1
 httpx==0.27.0
-home-assistant-bluetooth==1.12.1
+home-assistant-bluetooth==1.12.2
 ifaddr==0.2.0
 Jinja2==3.1.4
 lru-dict==1.3.0
@@ -76,63 +76,64 @@ PyJWT==2.8.0
 cryptography==42.0.8
 Pillow==10.3.0
 pyOpenSSL==24.1.0
-orjson==3.9.15
+orjson==3.10.6
 packaging>=23.1
 pip>=21.3.1
 psutil-home-assistant==0.0.1
 python-slugify==8.0.4
 PyYAML==6.0.1
 requests==2.32.3
-SQLAlchemy==2.0.30
+SQLAlchemy==2.0.31
 typing-extensions>=4.12.2,<5.0
 ulid-transform==0.9.0
 urllib3>=1.26.5,<2
-voluptuous==0.13.1
+voluptuous==0.15.2
 voluptuous-serialize==2.6.0
+voluptuous-openapi==0.0.4
 yarl==1.9.4
 
 
 # Packages from package_constraints.txt which are otherwise installed on run
-aiodhcpwatcher==1.0.0
+aiodhcpwatcher==1.0.2
 aiodiscover==2.1.0
 aiodns==3.2.0
 aiohttp-fast-url-dispatcher==0.3.0
-aiohttp-fast-zlib==0.1.0
+aiohttp-fast-zlib==0.1.1
 aiohttp==3.9.5
 aiohttp_cors==0.7.0
-aiozoneinfo==0.1.0
+aiozoneinfo==0.2.1
 astral==2.2
-async-interrupt==1.1.1
-async-upnp-client==0.38.3
+async-interrupt==1.1.2
+async-upnp-client==0.39.0
 atomicwrites-homeassistant==1.4.1
 attrs==23.2.0
-awesomeversion==24.2.0
+awesomeversion==24.6.0
 bcrypt==4.1.2
 bleak-retry-connector==3.5.0
-bleak==0.22.1
-bluetooth-adapters==0.19.2
+bleak==0.22.2
+bluetooth-adapters==0.19.3
 bluetooth-auto-recovery==1.4.2
-bluetooth-data-tools==1.19.0
+bluetooth-data-tools==1.19.3
 cached_ipaddress==0.3.0
 certifi>=2021.5.30
 ciso8601==2.3.1
 cryptography==42.0.8
-dbus-fast==2.21.3
+dbus-fast==2.22.1
 fnv-hash-fast==0.5.0
 ha-av==10.1.1
 ha-ffmpeg==3.2.0
-habluetooth==3.1.1
+habluetooth==3.1.3
 hass-nabucasa==0.81.1
 hassil==1.7.1
-home-assistant-bluetooth==1.12.1
-home-assistant-frontend==20240610.1
-home-assistant-intents==2024.6.5
+home-assistant-bluetooth==1.12.2
+home-assistant-frontend==20240703.0
+home-assistant-intents==2024.7.3
 httpx==0.27.0
 ifaddr==0.2.0
 Jinja2==3.1.4
 lru-dict==1.3.0
 mutagen==1.47.0
-orjson==3.9.15
+orjson==3.10.6
 packaging>=23.1
 paho-mqtt==1.6.1
 Pillow==10.3.0
@@ -147,17 +148,18 @@ PyTurboJPEG==1.7.1
 pyudev==0.24.1
 PyYAML==6.0.1
 requests==2.32.3
-SQLAlchemy==2.0.30
+SQLAlchemy==2.0.31
 typing-extensions>=4.12.2,<5.0
 ulid-transform==0.9.0
 urllib3>=1.26.5,<2
+voluptuous-openapi==0.0.4
 voluptuous-serialize==2.6.0
-voluptuous==0.13.1
+voluptuous==0.15.2
 webrtc-noise-gain==1.2.3
 yarl==1.9.4
 zeroconf==0.132.2
 
 
 # HomeAssistant
-pytest-homeassistant-custom-component==0.13.135
-homeassistant==2024.6.3
+pytest-homeassistant-custom-component==0.13.144
+homeassistant==2024.7.0
