--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
 # Pre-commit requirements (copied from requirements_test_pre_commit.txt)
 codespell==2.3.0
-ruff==0.5.0
+ruff==0.5.6
 yamllint==1.35.1
 
 # from requirements_test.txt
-astroid==3.2.2
-coverage==7.5.3
-freezegun==1.5.0
+astroid==3.2.4
+coverage==7.6.0
+freezegun==1.5.1
 mock-open==1.4.0
-mypy-dev==1.11.0a9
+mypy-dev==1.12.0a2
 pre-commit==3.7.1
 pydantic==1.10.17
-pylint==3.2.4
+pylint==3.2.6
 pylint-per-file-ignores==1.3.2
-pipdeptree==2.19.0
-pytest-asyncio==0.23.6
+pipdeptree==2.23.1
+pip-licenses==4.5.1
+pytest-asyncio==0.23.8
 pytest-aiohttp==1.0.5
 pytest-cov==5.0.0
 pytest-freezer==0.4.8
@@ -22,15 +23,15 @@ pytest-github-actions-annotate-failures==0.2.0
 pytest-socket==0.7.0
 pytest-sugar==1.0.0
 pytest-timeout==2.3.1
-pytest-unordered==0.6.0
+pytest-unordered==0.6.1
 pytest-picked==0.5.0
 pytest-xdist==3.6.1
-pytest==8.2.0
+pytest==8.3.1
 requests-mock==1.12.1
 respx==0.21.1
 syrupy==4.6.1
 tqdm==4.66.4
-types-aiofiles==23.2.0.20240403
+types-aiofiles==23.2.0.20240623
 types-atomicwrites==1.4.5.1
 types-croniter==2.0.0.20240423
 types-beautifulsoup4==4.12.0.20240511
@@ -38,23 +39,22 @@ types-caldav==1.3.0.20240331
 types-chardet==0.1.5
 types-decorator==5.1.8.20240310
 types-paho-mqtt==1.6.0.20240321
-types-pillow==10.2.0.20240511
+types-pillow==10.2.0.20240520
 types-protobuf==4.24.0.20240106
-types-psutil==5.9.5.20240511
+types-psutil==6.0.0.20240621
 types-python-dateutil==2.9.0.20240316
 types-python-slugify==8.0.2.20240310
 types-pytz==2024.1.0.20240417
 types-PyYAML==6.0.12.20240311
 types-requests==2.31.0.3
 types-xmltodict==0.13.0.3
-uv==0.2.13
+uv==0.2.27
 
 
 # from requirements.txt
 aiodns==3.2.0
-aiohttp==3.9.5
+aiohttp==3.10.0
 aiohttp_cors==0.7.0
-aiohttp-fast-url-dispatcher==0.3.0
 aiohttp-fast-zlib==0.1.1
 aiozoneinfo==0.2.1
 astral==2.2
@@ -62,7 +62,7 @@ async-interrupt==1.1.2
 attrs==23.2.0
 atomicwrites-homeassistant==1.4.1
 awesomeversion==24.6.0
-bcrypt==4.1.2
+bcrypt==4.1.3
 certifi>=2021.5.30
 ciso8601==2.3.1
 fnv-hash-fast==0.5.0
@@ -73,9 +73,9 @@ ifaddr==0.2.0
 Jinja2==3.1.4
 lru-dict==1.3.0
 PyJWT==2.8.0
-cryptography==42.0.8
-Pillow==10.3.0
-pyOpenSSL==24.1.0
+cryptography==43.0.0
+Pillow==10.4.0
+pyOpenSSL==24.2.1
 orjson==3.10.6
 packaging>=23.1
 pip>=21.3.1
@@ -85,11 +85,11 @@ PyYAML==6.0.1
 requests==2.32.3
 SQLAlchemy==2.0.31
 typing-extensions>=4.12.2,<5.0
-ulid-transform==0.9.0
+ulid-transform==0.13.1
 urllib3>=1.26.5,<2
 voluptuous==0.15.2
 voluptuous-serialize==2.6.0
-voluptuous-openapi==0.0.4
+voluptuous-openapi==0.0.5
 yarl==1.9.4
 
 
@@ -97,37 +97,36 @@ yarl==1.9.4
 aiodhcpwatcher==1.0.2
 aiodiscover==2.1.0
 aiodns==3.2.0
-aiohttp-fast-url-dispatcher==0.3.0
 aiohttp-fast-zlib==0.1.1
-aiohttp==3.9.5
+aiohttp==3.10.0
 aiohttp_cors==0.7.0
 aiozoneinfo==0.2.1
 astral==2.2
 async-interrupt==1.1.2
-async-upnp-client==0.39.0
+async-upnp-client==0.40.0
 atomicwrites-homeassistant==1.4.1
 attrs==23.2.0
 awesomeversion==24.6.0
-bcrypt==4.1.2
+bcrypt==4.1.3
 bleak-retry-connector==3.5.0
 bleak==0.22.2
 bluetooth-adapters==0.19.3
 bluetooth-auto-recovery==1.4.2
-bluetooth-data-tools==1.19.3
+bluetooth-data-tools==1.19.4
 cached_ipaddress==0.3.0
 certifi>=2021.5.30
 ciso8601==2.3.1
-cryptography==42.0.8
+cryptography==43.0.0
 dbus-fast==2.22.1
 fnv-hash-fast==0.5.0
 ha-av==10.1.1
 ha-ffmpeg==3.2.0
 habluetooth==3.1.3
 hass-nabucasa==0.81.1
-hassil==1.7.1
+hassil==1.7.4
 home-assistant-bluetooth==1.12.2
-home-assistant-frontend==20240703.0
-home-assistant-intents==2024.7.3
+home-assistant-frontend==20240802.0
+home-assistant-intents==2024.7.29
 httpx==0.27.0
 ifaddr==0.2.0
 Jinja2==3.1.4
@@ -136,12 +135,13 @@ mutagen==1.47.0
 orjson==3.10.6
 packaging>=23.1
 paho-mqtt==1.6.1
-Pillow==10.3.0
+Pillow==10.4.0
 pip>=21.3.1
 psutil-home-assistant==0.0.1
 PyJWT==2.8.0
+pymicro-vad==1.0.1
 PyNaCl==1.5.0
-pyOpenSSL==24.1.0
+pyOpenSSL==24.2.1
 pyserial==3.5
 python-slugify==8.0.4
 PyTurboJPEG==1.7.1
@@ -150,16 +150,15 @@ PyYAML==6.0.1
 requests==2.32.3
 SQLAlchemy==2.0.31
 typing-extensions>=4.12.2,<5.0
-ulid-transform==0.9.0
+ulid-transform==0.13.1
 urllib3>=1.26.5,<2
-voluptuous-openapi==0.0.4
+voluptuous-openapi==0.0.5
 voluptuous-serialize==2.6.0
 voluptuous==0.15.2
-webrtc-noise-gain==1.2.3
 yarl==1.9.4
 zeroconf==0.132.2
 
 
 # HomeAssistant
-pytest-homeassistant-custom-component==0.13.144
-homeassistant==2024.7.0
+pytest-homeassistant-custom-component==0.13.148
+homeassistant==2024.7.4
