--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Pre-commit requirements (copied from requirements_test_pre_commit.txt)
 codespell==2.3.0
-ruff==0.6.2
+ruff==0.6.4
 yamllint==1.35.1
 
 # from requirements_test.txt
@@ -8,7 +8,7 @@ astroid==3.2.4
 coverage==7.6.0
 freezegun==1.5.1
 mock-open==1.4.0
-mypy-dev==1.12.0a2
+mypy-dev==1.12.0a3
 pre-commit==3.7.1
 pydantic==1.10.17
 pylint==3.2.6
@@ -85,12 +85,12 @@ PyYAML==6.0.2
 requests==2.32.3
 SQLAlchemy==2.0.31
 typing-extensions>=4.12.2,<5.0
-ulid-transform==0.13.1
+ulid-transform==1.0.2
 urllib3>=1.26.5,<2
 voluptuous==0.15.2
 voluptuous-serialize==2.6.0
 voluptuous-openapi==0.0.5
-yarl==1.9.4
+yarl==1.9.11
 
 
 # Packages from package_constraints.txt which are otherwise installed on run
@@ -112,21 +112,21 @@ bleak-retry-connector==3.5.0
 bleak==0.22.2
 bluetooth-adapters==0.19.4
 bluetooth-auto-recovery==1.4.2
-bluetooth-data-tools==1.19.4
-cached_ipaddress==0.3.0
+bluetooth-data-tools==1.20.0
+cached-ipaddress==0.5.0
 certifi>=2021.5.30
 ciso8601==2.3.1
 cryptography==43.0.0
-dbus-fast==2.23.0
+dbus-fast==2.24.0
 fnv-hash-fast==1.0.2
 ha-av==10.1.1
 ha-ffmpeg==3.2.0
-habluetooth==3.3.2
+habluetooth==3.4.0
 hass-nabucasa==0.81.1
 hassil==1.7.4
 home-assistant-bluetooth==1.12.2
-home-assistant-frontend==20240809.0
-home-assistant-intents==2024.8.7
+home-assistant-frontend==20240906.0
+home-assistant-intents==2024.9.4
 httpx==0.27.0
 ifaddr==0.2.0
 Jinja2==3.1.4
@@ -143,22 +143,23 @@ pymicro-vad==1.0.1
 PyNaCl==1.5.0
 pyOpenSSL==24.2.1
 pyserial==3.5
+pyspeex-noise==1.0.2
 python-slugify==8.0.4
-PyTurboJPEG==1.7.1
+PyTurboJPEG==1.7.5
 pyudev==0.24.1
 PyYAML==6.0.2
 requests==2.32.3
 SQLAlchemy==2.0.31
 typing-extensions>=4.12.2,<5.0
-ulid-transform==0.13.1
+ulid-transform==1.0.2
 urllib3>=1.26.5,<2
 voluptuous-openapi==0.0.5
 voluptuous-serialize==2.6.0
 voluptuous==0.15.2
-yarl==1.9.4
-zeroconf==0.132.2
+yarl==1.9.11
+zeroconf==0.133.0
 
 
 # HomeAssistant
-pytest-homeassistant-custom-component==0.13.154
-homeassistant==2024.8.2
+pytest-homeassistant-custom-component==0.13.161
+homeassistant==2024.9.0
