--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,28 @@
 # Pre-commit requirements (copied from requirements_test_pre_commit.txt)
 codespell==2.3.0
-ruff==0.6.4
+ruff==0.6.8
 yamllint==1.35.1
 
 # from requirements_test.txt
-astroid==3.2.4
-coverage==7.6.0
+# linters such as pylint should be pinned, as new releases
+# make new things fail. Manually update these pins when pulling in a
+# new version
+
+# types-* that have versions roughly corresponding to the packages they
+# contain hints for available should be kept in sync with them
+
+astroid==3.3.4
+coverage==7.6.1
 freezegun==1.5.1
 mock-open==1.4.0
-mypy-dev==1.12.0a3
-pre-commit==3.7.1
-pydantic==1.10.17
-pylint==3.2.6
+mypy-dev==1.12.0a5
+pre-commit==3.8.0
+pydantic==1.10.18
+pylint==3.3.1
 pylint-per-file-ignores==1.3.2
-pipdeptree==2.23.1
-pip-licenses==4.5.1
-pytest-asyncio==0.23.8
+pipdeptree==2.23.4
+pip-licenses==5.0.0
+pytest-asyncio==0.24.0
 pytest-aiohttp==1.0.5
 pytest-cov==5.0.0
 pytest-freezer==0.4.8
@@ -26,34 +33,34 @@ pytest-timeout==2.3.1
 pytest-unordered==0.6.1
 pytest-picked==0.5.0
 pytest-xdist==3.6.1
-pytest==8.3.1
+pytest==8.3.3
 requests-mock==1.12.1
 respx==0.21.1
-syrupy==4.6.1
-tqdm==4.66.4
-types-aiofiles==23.2.0.20240623
+syrupy==4.7.1
+tqdm==4.66.5
+types-aiofiles==24.1.0.20240626
 types-atomicwrites==1.4.5.1
 types-croniter==2.0.0.20240423
-types-beautifulsoup4==4.12.0.20240511
-types-caldav==1.3.0.20240331
+types-beautifulsoup4==4.12.0.20240907
+types-caldav==1.3.0.20240824
 types-chardet==0.1.5
 types-decorator==5.1.8.20240310
 types-paho-mqtt==1.6.0.20240321
-types-pillow==10.2.0.20240520
-types-protobuf==4.24.0.20240106
-types-psutil==6.0.0.20240621
-types-python-dateutil==2.9.0.20240316
+types-pillow==10.2.0.20240822
+types-protobuf==4.25.0.20240417
+types-psutil==6.0.0.20240901
+types-python-dateutil==2.9.0.20240906
 types-python-slugify==8.0.2.20240310
-types-pytz==2024.1.0.20240417
-types-PyYAML==6.0.12.20240311
+types-pytz==2024.2.0.20240913
+types-PyYAML==6.0.12.20240917
 types-requests==2.31.0.3
 types-xmltodict==0.13.0.3
-uv==0.2.27
 
 
 # from requirements.txt
 aiodns==3.2.0
-aiohttp==3.10.5
+aiohasupervisor==0.1.0
+aiohttp==3.10.8
 aiohttp_cors==0.7.0
 aiohttp-fast-zlib==0.1.1
 aiozoneinfo==0.2.1
@@ -62,23 +69,23 @@ async-interrupt==1.2.0
 attrs==23.2.0
 atomicwrites-homeassistant==1.4.1
 awesomeversion==24.6.0
-bcrypt==4.1.3
+bcrypt==4.2.0
 certifi>=2021.5.30
 ciso8601==2.3.1
 fnv-hash-fast==1.0.2
 hass-nabucasa==0.81.1
-httpx==0.27.0
+httpx==0.27.2
 home-assistant-bluetooth==1.12.2
 ifaddr==0.2.0
 Jinja2==3.1.4
 lru-dict==1.3.0
+mashumaro==3.13.1
 PyJWT==2.9.0
-cryptography==43.0.0
+cryptography==43.0.1
 Pillow==10.4.0
 pyOpenSSL==24.2.1
 orjson==3.10.7
 packaging>=23.1
-pip>=21.3.1
 psutil-home-assistant==0.0.1
 python-slugify==8.0.4
 PyYAML==6.0.2
@@ -87,18 +94,19 @@ SQLAlchemy==2.0.31
 typing-extensions>=4.12.2,<5.0
 ulid-transform==1.0.2
 urllib3>=1.26.5,<2
+uv==0.4.17
 voluptuous==0.15.2
 voluptuous-serialize==2.6.0
 voluptuous-openapi==0.0.5
-yarl==1.9.11
-
+yarl==1.13.1
 
 # Packages from package_constraints.txt which are otherwise installed on run
 aiodhcpwatcher==1.0.2
 aiodiscover==2.1.0
 aiodns==3.2.0
+aiohasupervisor==0.1.0
 aiohttp-fast-zlib==0.1.1
-aiohttp==3.10.5
+aiohttp==3.10.8
 aiohttp_cors==0.7.0
 aiozoneinfo==0.2.1
 astral==2.2
@@ -107,16 +115,16 @@ async-upnp-client==0.40.0
 atomicwrites-homeassistant==1.4.1
 attrs==23.2.0
 awesomeversion==24.6.0
-bcrypt==4.1.3
+bcrypt==4.2.0
 bleak-retry-connector==3.5.0
 bleak==0.22.2
 bluetooth-adapters==0.19.4
 bluetooth-auto-recovery==1.4.2
 bluetooth-data-tools==1.20.0
-cached-ipaddress==0.5.0
+cached-ipaddress==0.6.0
 certifi>=2021.5.30
 ciso8601==2.3.1
-cryptography==43.0.0
+cryptography==43.0.1
 dbus-fast==2.24.0
 fnv-hash-fast==1.0.2
 ha-av==10.1.1
@@ -125,18 +133,18 @@ habluetooth==3.4.0
 hass-nabucasa==0.81.1
 hassil==1.7.4
 home-assistant-bluetooth==1.12.2
-home-assistant-frontend==20240906.0
-home-assistant-intents==2024.9.4
-httpx==0.27.0
+home-assistant-frontend==20241002.2
+home-assistant-intents==2024.10.2
+httpx==0.27.2
 ifaddr==0.2.0
 Jinja2==3.1.4
 lru-dict==1.3.0
+mashumaro==3.13.1
 mutagen==1.47.0
 orjson==3.10.7
 packaging>=23.1
 paho-mqtt==1.6.1
 Pillow==10.4.0
-pip>=21.3.1
 psutil-home-assistant==0.0.1
 PyJWT==2.9.0
 pymicro-vad==1.0.1
@@ -153,13 +161,14 @@ SQLAlchemy==2.0.31
 typing-extensions>=4.12.2,<5.0
 ulid-transform==1.0.2
 urllib3>=1.26.5,<2
+uv==0.4.17
 voluptuous-openapi==0.0.5
 voluptuous-serialize==2.6.0
 voluptuous==0.15.2
-yarl==1.9.11
-zeroconf==0.133.0
+yarl==1.13.1
+zeroconf==0.135.0
 
 
 # HomeAssistant
-pytest-homeassistant-custom-component==0.13.161
-homeassistant==2024.9.0
+pytest-homeassistant-custom-component==0.13.171
+homeassistant==2024.10.0
