Define default user and bypass onboarding
Verified the script using https://www.shellcheck.net/

--- a/container_content/.vscode/launch.json
+++ b/container_content/.vscode/launch.json
@@ -10,7 +10,8 @@
 			"args": [
 				"--debug",
 				"-c",
-				"config"
+				"config",
+				"-v"
 			],
 			"serverReadyAction": {
 				"action": "openExternally"
